--- a/HTML/frais.css
+++ b/HTML/frais.css
@@ -136,10 +136,11 @@ input[type="button"] {
 }
 .main-3three {
     background-image: url(images/alex-loup-393839-unsplash\(hand\)2.webp);
-    width: 361px;
+    width: 25%;
     height: 310px;
     object-fit: cover;
     object-position: 50% 50%;
+    padding: 0px 92px;
 }
 .main-3three input[type="button"] {
     border: 4px solid;
@@ -147,5 +148,11 @@ input[type="button"] {
     cursor: pointer;
     font-size: large;
     font-weight: bold;
-    margin: 35% 83%;
+    margin: 56% 115%;
+}
+.main-3 {
+    width: 25%;
+    text-align: center;
+    font-size: 10px;
+    margin: 0px 473px;
 }
